# stm32f4-disc-accelerometer-rust

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
