[package]
authors = ["Michaël Lefebvre <michael.lefebvre.31@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-world-embedded"
version = "0.1.0"

[dependencies]
stm32f407g-disc = "0.4.1"
accelerometer = "0.11.0"
lis302dl = "0.1.0"
cortex-m = "^0.6.0"
cortex-m-rt = "^0.6"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"

[dependencies.stm32f4]
version = "0.14.0"
# Edit this feature to change which STM32F4 device you are using
features = ["stm32f407"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "hello-world-embedded"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
